<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sabd="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/chat_enc_timer"
        android:title=""
        sabd:actionLayout="@layout/chat_header_enc_layout"
        sabd:showAsAction="always" />

    <item
        android:id="@+id/chat_menu_attach"
        android:icon="@drawable/ic_ab_attach"
        android:title="@string/Attach"
        sabd:showAsAction="always">

        <menu>
            <item
                android:id="@+id/attach_photo"
                android:icon="@drawable/ic_attach_photo"
                android:title="@string/ChatTakePhoto" />

            <item
                android:id="@+id/attach_gallery"
                android:icon="@drawable/ic_attach_gallery"
                android:title="@string/ChatGallery" />

            <item
                android:id="@+id/attach_video"
                android:icon="@drawable/ic_attach_video"
                android:title="@string/ChatVideo" />

            <item
                android:id="@+id/attach_document"
                android:icon="@drawable/ic_ab_doc"
                android:title="@string/ChatDocument" />

            <item
                android:id="@+id/attach_location"
                android:icon="@drawable/ic_attach_location"
                android:title="@string/ChatLocation" />
        </menu>

    </item>

    <item
        android:id="@+id/chat_menu_avatar"
        android:title=""
        sabd:actionLayout="@layout/chat_header_layout"
        sabd:showAsAction="always" />

</menu>